# UnityMarineSim

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Dockerfile  NewAssembly.csproj  README.md  Unity.RenderPipelines.Core.Samples.Editor.csproj  Unity.RenderPipelines.Core.Samples.Runtime.csproj  Unity.RenderPipelines.HighDefinition.Samples.Common.Editor.csproj  Unity.RenderPipelines.HighDefinition.Samples.Common.Runtime.csproj  UnityMarineSim.slnx  docker-compose.yml  requirements.txt  run_headless.sh
Assets/: IdLabelConfig.asset  OutdoorsScene.unity  perception_dev.unity  scene1_with_sample_island.unity
Assets/Perception/: IdLabelConfig.asset  POV_RT.renderTexture  SemanticSegmentationLabelConfig.asset
Assets/Prefabs/: Buoy.prefab  Catamaran.prefab  (+4 more)
Config/: Scene.json
ProjectSettings/: ProjectSettings.asset
config/: n3mo.rviz
doc/: headless.md  todo.md
recordings/: map.yaml
ros2_ws/src/n3_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/n3_common/n3_common/: n3_const.py
ros2_ws/src/n3_common/n3_common/algos/: __init__.py  pid.py  ramped_pid.py
ros2_ws/src/n3_common/n3_common/geo/: __init__.py  frame_ids.py  geometry.py  local_cartesian_projector.py  tf_helper.py
ros2_ws/src/n3_common/n3_common/math_utils/: angles.py  filters.py  random.py
ros2_ws/src/n3_common/n3_common/models/: __init__.py  angle_models.py  pose_models.py  sail_angle_models.py  state_enums.py  time_models.py  velocity_models.py  vessel_models.py  waypoint_models.py  wind_angle_models.py  wind_models.py
ros2_ws/src/n3_common/n3_common/params/: __init__.py  pydantic_params_base.py
ros2_ws/src/n3_common/n3_common/ros/: README.md  __init__.py  msg.py  msg.pyi  time.py
ros2_ws/src/n3_common/n3_common/topics/: demo_topics.py  n3mo_topics.py  sim_topics.py  topics_model.py
ros2_ws/src/n3_common/n3_common/utils/: logger_helper.py  topic_checker.py
ros2_ws/src/n3_new_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/n3_new_msgs/msg/: Anemometer.msg  Detection.msg  DetectionArray.msg  Maneuver.msg  MissionState.msg  PilotCommand.msg  PilotStatus.msg  PlanState.msg  ResetPID.msg  SailAngle.msg  Track.msg  TrackArray.msg  Velocity.msg  Waypoint.msg  WaypointList.msg  Wind.msg
ros2_ws/src/n3_new_msgs/srv/: ScenarioCommand.srv  SetBringupTarget.srv  UpdateCode.srv
tools/: solo_preview.py
(+85 files in other folders)
