<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>n3_common</name>
    <version>0.0.0</version>
    <description>Common utilities shared by N3 ROS2 Python nodes</description>
    <maintainer email="cro@todo.todo">cro</maintainer>
    <license>TODO: License declaration</license>

    <depend>rclpy</depend>
    <depend>rcl_interfaces</depend>
    <depend>python3-pydantic</depend>
    <depend>geometry_msgs</depend>
    <depend>geographic_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>n3_new_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_mypy</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>ament_xmllint</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
